[tool.poetry]
name = "infactory-py"
version = "0.0.1"
description = "Infactory Python Package -  Instantly connects your data sources, generate accurate queries, and give yourself complete control over AI responses."
authors = ["Ken Kocienda <kocienda@infactory.ai>, Sean Kruzel <sean@infactory.ai>"]
repository = "https://github.com/infactory-io/dev/tree/main/py/infactory"

license = "Infactory Python SDK"
readme = "README.md"

packages = [
    { include = "infactory_client" }
]

[tool.poetry.scripts]
nf = "infactory_client.cli:main"
infactory = "infactory_client.cli:main"

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
urllib3 = "^2.2.3"
python-dateutil = "^2.9.0.post0"
pydantic = "^2.9.2"
typing-extensions = "^4.12.2"
httpx = "^0.27.2"
tenacity = "^9.0.0"
python-dotenv = "^1.1.0"
typer = "^0.15.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"
isort = "^5.13.2"
coverage = "^7.6.1"
pytest-cov = "^5.0.0"
pre-commit = "^3.8.0"
coverage-badge = "^1.1.2"
flake8 = "^7.1.1"
parameterized = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
